--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,54 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.aguntuk</groupId>
-  <artifactId>XWidgetsDemo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <artifactId>requestmapper</artifactId>
+  <version>1.0</version>
+  <repositories>
+	  <repository>
+	    <id>reflections-repo</id>
+	    <name>Reflections Maven2 Repository</name>
+	    <url>http://reflections.googlecode.com/svn/repo</url>
+	  </repository>
+	  <repository>
+	    <id>java.net2</id>
+	    <name>Repository hosting the jee6 artifacts</name>
+	    <url>http://download.java.net/maven/2</url>
+	  </repository>	  
+  </repositories>
   <dependencies>
   	<dependency>
-  		<groupId>org.aguntuk</groupId>
-  		<artifactId>requestmapper</artifactId>
-  		<version>1.0</version>
+  		<groupId>org.freemarker</groupId>
+  		<artifactId>freemarker</artifactId>
+  		<version>2.3.20</version>
   		<type>jar</type>
   		<scope>compile</scope>
-  	</dependency> 
-  </dependencies> 
+  	</dependency>
+	<dependency>
+	  <groupId>org.reflections</groupId>
+	  <artifactId>reflections</artifactId>
+	  <version>0.9.5</version>
+	</dependency>
+	<dependency>
+	    <groupId>commons-beanutils</groupId>
+	    <artifactId>commons-beanutils</artifactId>
+	    <version>1.8.3</version>
+	</dependency>
+	<dependency>
+       <groupId>com.google.code.gson</groupId>
+       <artifactId>gson</artifactId>
+       <version>1.7.1</version>
+   	</dependency>
+	<dependency>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>jstl</artifactId>
+	  <version>1.2</version>
+	  <scope>runtime</scope>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.2</version>
+	</dependency>	   	
+</dependencies>	
+  
 </project>
